tree-sitter-alexandrite/grammar.js
    source_file: $ => seq(
      repeat(choice(
        $._declaration,
        $._terminator,
        seq($._statement, $._terminator),
      )),
      optional($._statement),
    ),

    _terminator: $ => choice($._newline, ';'),

    _declaration: $ => choice(
      $.directive,
      $.import_statement,
      $.const_definition,
      $.struct_definition,
      $.enum_definition,
      $.error_definition,
      $.interface_definition,
      $.refinement_definition,
      $.function_definition,
      $.extern_definition,
      $.test_declaration,
    ),

    // --- Names ---

    // `empty?`, `move!`: the scanner decides whether a `?`/`!` belongs to the name.
    _ident: $ => choice($.identifier, alias($._suffixed_identifier, $.identifier)),

    // A name in an expression: also the contextual words (`select(a, b)`, a local `pub`).
    _name: $ => choice(
      $._ident,
      prec(-1, alias(choice(...SOFT_KEYWORDS), $.identifier)),
    ),

    _type_identifier: $ => alias($.constant, $.type_identifier),

    // --- Directives and Attributes ---

    directive: $ => seq(
      '#![',
      field('name', $.identifier),
      optional(seq('(', field('argument', $.identifier), ')')),
      ']',
    ),

    attribute: $ => seq(
      '#[',
      field('name', $.identifier),
      optional(seq('(', optional($.attribute_arguments), ')')),
      ']',
    ),

    attribute_arguments: $ => seq(
      sepBy1(',', choice($._expression, $.keyword_argument)),
      optional(','),
    ),

    _attributes: $ => repeat1($.attribute),

    // --- Imports and constants ---

    import_statement: $ => seq(
      'import',
      optional(field('alias', $.identifier)),
      field('path', $.string),
    ),

    // `NAME = v`, `pub NAME: T = v`, `#[embed("f")] NAME: Str` (no value).
    const_definition: $ => prec.right(seq(
      optional($._attributes),
      optional('pub'),
      field('name', $.constant),
      choice(
        seq(':', field('type', $._type), optional(seq('=', field('value', $._expression)))),
        seq('=', field('value', $._expression)),
      ),
    )),

    // --- Types: structs, enums, errors, interfaces, refinements ---

    struct_definition: $ => seq(
      optional($._attributes),
      optional('pub'),
      'struct',
      field('name', $._type_identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('body', $.struct_body),
    ),

    struct_body: $ => seq(
      '{',
      repeat(choice(
        $.field_declaration,
        alias($.function_definition, $.method_definition),
        $._terminator,
        ',',
      )),
      '}',
    ),

    field_declaration: $ => seq(
      optional($._attributes),
      field('name', $._ident),
      ':',
      field('type', $._type),
    ),

    enum_definition: $ => seq(
      optional($._attributes),
      optional('pub'),
      'enum',
      field('name', $._type_identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('body', $.enum_body),
    ),

    error_definition: $ => seq(
      optional($._attributes),
      optional('pub'),
      'error',
      field('name', $._type_identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('body', $.enum_body),
    ),

    enum_body: $ => seq(
      '{',
      repeat(choice(
        $.variant_declaration,
        alias($.function_definition, $.method_definition),
        $._terminator,
        ',',
      )),
      '}',
    ),

    variant_declaration: $ => seq(
      optional($._attributes),
      field('name', $._type_identifier),
      optional(field('parameters', $.variant_parameters)),
    ),

    variant_parameters: $ => seq(
      token.immediate('('),
      sepBy(',', $.variant_parameter),
      optional(','),
      ')',
    ),

    variant_parameter: $ => seq(
      optional($._attributes),
      optional(seq(field('name', $._ident), ':')),
      field('type', $._type),
    ),

    interface_definition: $ => seq(
      optional('pub'),
      'interface',
      field('name', $._type_identifier),
      field('body', $.interface_body),
    ),

    interface_body: $ => seq(
      '{',
      repeat(choice($.interface_method_definition, $._terminator, ',')),
      '}',
    ),

    interface_method_definition: $ => seq(
      optional($._attributes),
      'def',
      field('name', $._method_name),
      optional(field('type_parameters', $.type_parameters)),
      optional(field('parameters', $.parameters)),
      optional(field('return_type', $.return_type)),
      optional(field('body', $._def_body)),
    ),

    // `refine Name[T] for Type { def ... }`
    refinement_definition: $ => seq(
      optional('pub'),
      'refine',
      field('name', $._type_identifier),
      optional(field('type_parameters', $.type_parameters)),
      'for',
      field('target', $._type),
      field('body', $.refinement_body),
    ),

    refinement_body: $ => seq(
      '{',
      repeat(choice(alias($.function_definition, $.method_definition), $._terminator)),
      '}',
    ),

    // --- Functions ---

    function_definition: $ => seq(
      optional($._attributes),
      optional(seq('pub', optional($._attributes))),
      field('keyword', choice('def', 'fn', 'ƒ')),
      field('name', $._method_name),
      optional(field('type_parameters', $.type_parameters)),
      optional(field('parameters', $.parameters)),
      optional(field('return_type', $.return_type)),
      field('body', $._def_body),
    ),

    // `#[link("c")] pub extern def f(x: I32) -> I32 = "symbol"`
    extern_definition: $ => prec.right(seq(
      optional($._attributes),
      optional('pub'),
      'extern',
      field('keyword', choice('def', 'fn')),
      field('name', $._ident),
      optional(field('parameters', $.parameters)),
      optional(field('return_type', $.return_type)),
      optional(seq('=', field('link_name', $.string))),
    )),

    _def_body: $ => alias($._def_block, $.block),

    _method_name: $ => choice(
      $._ident,
      $.operator_name,
      seq('self', '.', choice($._ident, $.operator_name)),
    ),

    operator_name: $ => choice(
      '+', '-', '*', '/', '%', '==', '<=>', '<<', '>>', '**',
      seq('[', ']'),
    ),

    // --- Tests ---

    test_declaration: $ => seq(
      field('kind', choice('test', 'bench', 'example')),
      field('name', $.string),
      field('body', alias($.test_body, $.block)),
      optional(seq(
        'outputs',
        field('expected_output', choice($.string, $.heredoc)),
      )),
    ),

    // `test "x" { |t| ... }`
    type_parameters: $ => seq(
      token.immediate('['),
      sepBy1(',', $.type_parameter),
      optional(','),
      ']',
    ),

    type_parameter: $ => seq(
      field('name', $._type_identifier),
      optional(seq(':', field('bound', choice($.like_type, $._type)))),
    ),

    // `like Int`: a type parameter's bound, or a type test (`T is like Int`).
    like_type: $ => seq('like', $._type_identifier),

    parameters: $ => seq(
      token.immediate('('),
      sepBy(',', $.parameter),
      optional(','),
      ')',
    ),

    // `name: T = default` (S8)
    parameter: $ => seq(
      field('name', $._ident),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('default', $._expression))),
    ),

    return_type: $ => choice(
      seq('->', field('type', $._type)),
      '~',
    ),

    // --- Types ---

    _type: $ => choice(
      $._type_identifier,
      $.scoped_type_identifier,
      $.generic_type,
      $.array_type,
      $.fixed_array_type,
      $.handle_type,
      $.optional_type,
      $.result_type,
      $.function_type,
      $.tuple_type,
      $.parenthesized_type,
    ),

    scoped_type_identifier: $ => seq(
      field('scope', $.identifier),
      '.',
      field('name', $._type_identifier),
    ),

    generic_type: $ => seq(
      field('name', choice($._type_identifier, $.scoped_type_identifier)),
      field('type_arguments', $.type_arguments),
    ),

    type_arguments: $ => seq(
      token.immediate('['),
      sepBy1(',', $._type),
      optional(','),
      ']',
    ),

    array_type: $ => seq('[', field('element', $._type), ']'),

    optional_type: $ => prec(2, seq($._type, token.immediate('?'))),

    // `~T`, `~T?`, `~T<E | pkg.F>`
    result_type: $ => prec.right(1, seq(
      '~',
      field('type', $._type),
      optional(field('errors', $.error_set)),
    )),

    error_set: $ => seq(
      token.immediate('<'),
      sepBy1('|', choice($._type_identifier, $.scoped_type_identifier)),
      '>',
    ),

    _statement: $ => choice(
      $._simple_statement,
      $.if_modifier,
      $.unless_modifier,
      $.while_statement,
      $.for_statement,
    ),

    expression_statement: $ => $._expression,

    // `x: T = e`
    _place: $ => choice($._name, $.index_expression, $.member_expression),

    // `return`, `return v`, `return a, b`
    return_statement: $ => (seq(
      'return',
      optional(seq($._expression, repeat(seq(',', $._expression)))),
    )),

    _jump: $ => choice(
      alias($._return_jump, $.return_statement),
      $.break_statement,
      $.next_statement,
      $.fail_statement,
    ),

    block: $ => seq(
      alias($._block_lbrace, '{'),
      optional(field('parameters', $.block_parameters)),
      ...statements($),
      '}',
    ),

    // The body of if / while / for / case / defer / spawn.
    _cond_body: $ => alias($._cond_block, $.block),
    block_parameters: $ => seq(
      '|',
      sepBy(',', field('name', $._ident)),
      optional(','),
      '|',
    ),

    // `->(x: Int, y) -> Int { ... }`, `-> { ... }`
    case_expression: $ => choice(
      seq(
        'case',
        field('subject', $._expression),
        alias($._body_lbrace, '{'),
        ...separated($, $.case_arm),
        '}',
      ),
      // `case { cond => ... }`: each arm is a condition.
      seq(
        'case',
        alias($._body_lbrace, '{'),
        ...separated($, alias($.case_condition_arm, $.case_arm)),
        '}',
      ),
    ),

    case_arm: $ => seq(
      field('pattern', $._pattern),
      repeat(seq('|', field('pattern', $._pattern))),
      '=>',
      field('body', $._arm_body),
    ),

    _arm_body: $ => choice($._cond_body, $._jump, $._expression),

    _pattern: $ => choice(
      $.variant_pattern,
      prec(PREC.pattern, $._expression),
    ),

    // `Some`, `Bad(pos, _)`, `PErr.Bad(p)`, `pkg.PErr.Bad(p)`, `pkg.Type(v)`
    variant_pattern: $ => prec.dynamic(1, choice(
      seq(field('name', $._variant_path), optional(field('bindings', $.pattern_bindings))),
      // `pkg.Type(v)`: an implementor from another package (a type switch);
      // without bindings `pkg.NAME` is a value.
      seq(field('name', $._package_type_path), field('bindings', $.pattern_bindings)),
    )),

    _variant_path: $ => choice(
      $.constant,
      seq($.constant, '.', $.constant),
      seq($.identifier, '.', $.constant, '.', $.constant),
    ),

    _package_type_path: $ => seq($.identifier, '.', $.constant),

    pattern_bindings: $ => seq(
      token.immediate('('),
      sepBy(',', $._ident),
      optional(','),
      ')',
    ),

    if_expression: $ => prec.right(seq(
      'if',
      field('condition', $._expression),
      field('consequence', $._cond_body),
      repeat(field('alternative', $.elsif_clause)),
      optional(field('alternative', $.else_clause)),
    )),

    elsif_clause: $ => seq(
      choice('elsif', seq('else', 'if'), seq('else', 'unless')),
      field('condition', $._expression),
      field('consequence', $._cond_body),
    ),

    else_clause: $ => seq('else', field('body', $._cond_body)),

    // `spawn { ... }`, `spawn f(x)`
    _expression: $ => choice(
      $._primary_expression,
      $.unary_expression,
      $.binary_expression,
      $.ternary_expression,
      $.range_expression,
      $.assignment_expression,
      $.type_test,
      $.command_call,
      $.spawn_expression,
    ),

    _primary_expression: $ => choice(
      $._name,
      $.constant,
      $.integer,
      $.float,
      $.imaginary,
      $.string,
      $.raw_string,
      $.heredoc,
      $.command_literal,
      $.symbol,
      $.boolean,
      $.nil,
      $.none,
      $.parenthesized_expression,
      $.tuple_expression,
      $.array_literal,
      $.array_repeat,
      $.map_literal,
      $.lambda_expression,
      $.member_expression,
      $.index_expression,
      $.call_expression,
      $.if_expression,
      $.unless_expression,
      $.case_expression,
      $.select_expression,
    ),

    assignment_expression: $ => prec.right(PREC.assign, seq(
      field('left', $._place),
      field('operator', choice(...ASSIGN_OPS)),
      field('right', $._expression),
    )),

    binary_expression: $ => {
      const minus = alias($._binary_minus, '-');
      const caret = alias($._binary_caret, '^');
      const table = [
        ['&&', PREC.and],
        ['==', PREC.equality],
        ['!=', PREC.equality],
        ['<', PREC.comparison],
        ['<=', PREC.comparison],
        ['>', PREC.comparison],
        ['>=', PREC.comparison],
        ['<=>', PREC.comparison],
        ['|', PREC.bitor],
        [caret, PREC.bitor],
        ['&', PREC.bitand],
        ['&^', PREC.bitand],
        ['<<', PREC.shift],
        ['>>', PREC.shift],
        ['+', PREC.additive],
        [minus, PREC.additive],
        ['+%', PREC.additive],
        ['-%', PREC.additive],
        ['*', PREC.multiplicative],
        ['/', PREC.multiplicative],
        ['%', PREC.multiplicative],
        ['*%', PREC.multiplicative],
      ];
      return choice(
        // `opt || return v` / `|| fail e` / `|| break` / `|| next` (S8)
        prec.left(PREC.or, seq(
          field('left', $._expression),
          field('operator', '||'),
          field('right', choice($._expression, $._jump)),
        )),
        ...table.map(([operator, precedence]) => prec.left(precedence, seq(
          field('left', $._expression),
          // @ts-ignore
          field('operator', operator),
          field('right', $._expression),
        ))),
        prec.right(PREC.power, seq(
          field('left', $._expression),
          field('operator', '**'),
          field('right', $._expression),
        )),
      );
    },

    // `!` binds looser than `==` (`!a == b` is `!(a == b)`), as in the compiler.
    unary_expression: $ => choice(
      prec(PREC.unary, seq(
        field('operator', choice(alias($._unary_minus, '-'), alias($._unary_caret, '^'), '~')),
        field('operand', $._expression),
      )),
      prec(PREC.not, seq(
        field('operator', '!'),
        field('operand', $._expression),
      )),
    ),

    // `R is io.Seeker`, `T is like Int`, `T is Str` (S6)
    command_call: $ => prec.right(PREC.command, seq(
      field('function', $._name),
      field('arguments', $.command_argument_list),
    )),

    command_argument_list: $ => prec.right(seq(
      $._expression,
      repeat(seq(',', $._expression)),
    )),

    array_literal: $ => seq(
      '[',
      sepBy(',', $._expression),
      optional(','),
      ']',
    ),

    // `[0; 16]`
    array_repeat: $ => seq(
      '[',
      field('value', $._expression),
      ';',
      field('count', $._expression),
      ']',
    ),

    map_literal: $ => seq(
      '{',
      sepBy(',', $.pair),
      optional(','),
      '}',
    ),

    member_expression: $ => prec(PREC.postfix, seq(
      field('object', choice($._primary_expression, $.type_application)),
      field('operator', choice('.', '?.', '.~')),
      field('property', choice($._ident, $.constant)),
    )),

    // `Stack[Int]` before `.new`, `geom.Stack[Int]`, `T[U] is X`
    index_expression: $ => prec(PREC.call, seq(
      field('object', $._primary_expression),
      token.immediate('['),
      field('index', choice(
        $._expression,
        alias($.open_range, $.range_expression),
      )),
      ']',
    )),
