tree-sitter-alexandrite/test/corpus/advanced.txt
==================
Generics and Bounds
==================

pub def fix[H: Interface](h: H, i: Int) {
  if !down(h, i, h.len) {
    up(h, i)
  }
}

---

(source_file
  (function_definition
    (identifier)
    (type_parameters
      (type_parameter
        (type_identifier)
        (type_identifier)))
    (parameters
      (parameter
        (identifier)
        (type_identifier))
      (parameter
        (identifier)
        (primitive_type)))
    (block
      (expression_statement
        (if_expression
          (unary_expression
            (identifier)
            (argument_list
              (identifier)
              (identifier)
              (member_expression
                (identifier)
                (identifier))))
          (block
            (expression_statement
              (call_expression
                (identifier)
                (argument_list
                  (identifier)
                  (identifier))))))))))

==================
Case Expression on Binary Operator
==================

out << case f {
  Bools(_) => Data.Bools([false; n])
  _ => Data.Nil
}

---

(source_file
  (expression_statement
    (binary_expression
      (identifier)
      (case_expression
        (identifier)
        (case_arm
          (call_expression
            (constant)
            (argument_list
              (identifier)))
          (expression_statement
            (call_expression
              (member_expression
                (constant)
                (constant))
              (argument_list
                (array_repeat
                  (boolean)
                  (identifier))))))
        (case_arm
          (expression_statement
            (member_expression
              (constant)
              (constant))))))))

==================
String with Hashes and Escapes
==================

s = "##2D##2E\n# Copyright 2026"

---

(source_file
  (expression_statement
    (assignment_expression
      (identifier)
      (string
        (string_content)
        (string_content)
        (escape_sequence)
        (string_content)))))

==================
Test with Heredoc Output
==================

test "example test" {
  puts "hello"
} outputs <<~EOS
  hello
EOS

---

(source_file
  (test_declaration
    (string
      (string_content))
    (block
      (command_statement
        (identifier)
        (command_argument_list
          (string
            (string_content)))))
    (heredoc)
    (heredoc_body
      (heredoc_content)
      (heredoc_end))))
