tree-sitter-alexandrite/test/corpus/basic.txt
==================
Functions and Definitions
==================

pub fn add(a: Int, b: Int) -> Int {
  a + b
}

ƒ area(r: Float) -> Float {
  3.14 * r * r
}

def puts_greeting(name: Str) {
  puts "hello #{name}"
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (primitive_type))
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (expression_statement
        (binary_expression
          left: (identifier)
          right: (identifier)))))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (return_type
      type: (primitive_type))
    body: (block
      (expression_statement
        (binary_expression
          left: (binary_expression
            left: (float)
            right: (identifier))
          right: (identifier)))))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (primitive_type)))
    body: (block
      (command_statement
        function: (identifier)
        arguments: (command_argument_list
          (string
            (string_content)
            (interpolation
              (identifier))))))))

==================
Control Flow and Conditionals
==================

if x > 0 {
  puts "positive"
} else if x == 0 {
  puts "zero"
} else {
  puts "negative"
}

return val if done?

---

(source_file
  (expression_statement
    (if_expression
      left: (identifier)
      right: (integer)
      consequence: (block
        (command_statement
          function: (identifier)
          arguments: (command_argument_list
            (string
              (string_content)))))
      (elsif_clause
        left: (identifier)
        right: (integer)
        consequence: (block
          (command_statement
            function: (identifier)
            arguments: (command_argument_list
              (string
                (string_content))))))
      (else_clause
        body: (block
          (command_statement
            function: (identifier)
            arguments: (command_argument_list
              (string
                (string_content))))))))
  (return_statement
    (identifier)
    condition: (identifier)))

==================
Structs and Types
==================

struct Point[T] {
  x: T
  y: T

  def norm(self) -> T {
    self.x + self.y
  }
}

---

(source_file
  (struct_definition
    name: (type_identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier)))
    body: (struct_body
      (field_declaration
        name: (identifier)
        type: (type_identifier))
      (field_declaration
        name: (identifier)
        type: (type_identifier))
      (method_definition
        name: (identifier)
        parameters: (parameters
          (parameter
            name: (identifier)))
        return_type: (return_type
          type: (type_identifier))
        body: (block
          (expression_statement
            (binary_expression
              left: (member_expression
                object: (identifier)
                property: (identifier))
              right: (member_expression
                object: (identifier)
                property: (identifier)))))))))

==================
Command Literals and Splices
==================

`printf '[%s]' #{*args}`

---

(source_file
  (expression_statement
    (command_literal
      (command_content)
      (splice
        (identifier)))))
