tree-sitter-alexandrite/test/corpus/declarations.txt
==================
Directives and imports
==================

#![test(external)]
import "strings"
import ex "os/exec"

---

(source_file
  (directive
    (identifier)
    (identifier))
  (import_statement
    (string
      (string_content)))
  (import_statement
    (identifier)
    (string
      (string_content))))

==================
Constants and package state
==================

pub HITS = Atomic.new(0)
REG: Mutex[Map[Str, Int]] = Mutex.new({})
MAX = 1 <<
  20

---

(source_file
  (const_definition
    (constant)
    (call_expression
      (member_expression
        (constant)
        (identifier))
      (argument_list
        (integer))))
  (const_definition
    (constant)
    (generic_type
      (type_identifier)
      (type_arguments
        (generic_type
          (type_identifier)
          (type_arguments
            (type_identifier)
            (type_identifier)))))
    (call_expression
      (member_expression
        (constant)
        (identifier))
      (argument_list
        (map_literal))))
  (const_definition
    (constant)
    (binary_expression
      (integer)
      (integer))))

==================
Embedded constants
==================

#[embed("data/*.txt")]
#[embed("extra.txt")]
pub FILES: embed.FS

---

(source_file
  (const_definition
    (attribute
      (identifier)
      (attribute_arguments
        (string
          (string_content))))
    (attribute
      (identifier)
      (attribute_arguments
        (string
          (string_content))))
    (constant)
    (scoped_type_identifier
      (identifier)
      (type_identifier))))

==================
One-line struct with semicolons and recursive fields
==================

struct Node { kids: [Node]; next: Node? }
struct Scaled { inner: Shape; k: Float }

---

(source_file
  (struct_definition
    (type_identifier)
    (struct_body
      (field_declaration
        (identifier)
        (array_type
          (type_identifier)))
      (field_declaration
        (identifier)
        (optional_type
          (type_identifier)))))
  (struct_definition
    (type_identifier)
    (struct_body
      (field_declaration
        (identifier)
        (type_identifier))
      (field_declaration
        (identifier)
        (type_identifier)))))

==================
Struct with attributes and special method names
==================

#[derive(Json)]
pub struct Point {
  #[field(json: "x", data: "X")] x: Int
  next: Int
  def self.origin -> Point { Point.new() }
  def +(o: Point) -> Point { Point.new(x: x + o.x) }
  def [](i: Int) -> Int { x }
  def move!(dx: Int) { self.x += dx }
  def next -> Int { 1 }
  pub def fail -> Int { 2 }
}

---

(source_file
  (struct_definition
    (attribute
      (identifier)
      (attribute_arguments
        (constant)))
    (type_identifier)
    (struct_body
      (field_declaration
        (attribute
          (identifier)
          (attribute_arguments
            (keyword_argument
              (identifier)
              (string
                (string_content)))
            (keyword_argument
              (identifier)
              (string
                (string_content)))))
        (identifier)
        (type_identifier))
      (field_declaration
        (identifier)
        (type_identifier))
      (method_definition
        (identifier)
        (return_type
          (type_identifier))
        (block
          (expression_statement
            (call_expression
              (member_expression
                (constant)
                (identifier))
              (argument_list)))))
      (method_definition
        (operator_name)
        (parameters
          (parameter
            (identifier)
            (type_identifier)))
        (return_type
          (type_identifier))
        (block
          (expression_statement
            (call_expression
              (member_expression
                (constant)
                (identifier))
              (argument_list
                (keyword_argument
                  (identifier)
                  (binary_expression
                    (identifier)
                    (member_expression
                      (identifier)
                      (identifier)))))))))
      (method_definition
        (operator_name)
        (parameters
          (parameter
            (identifier)
            (type_identifier)))
        (return_type
          (type_identifier))
        (block
          (expression_statement
            (identifier))))
      (method_definition
        (identifier)
        (parameters
          (parameter
            (identifier)
            (type_identifier)))
        (block
          (expression_statement
            (assignment_expression
              (member_expression
                (identifier)
                (identifier))
              (identifier)))))
      (method_definition
        (identifier)
        (return_type
          (type_identifier))
        (block
          (expression_statement
            (integer))))
      (method_definition
        (identifier)
        (return_type
          (type_identifier))
        (block
          (expression_statement
            (integer)))))))

==================
Enums and errors
==================

enum Shape[T] {
  Circle(r: T)
  Rect(T, T), Empty
  def area -> Float { 0.0 }
}

pub error ParseErr {
  Bad(pos: Int)
  def message -> Str {
    case self { Bad(pos) => "bad input at #{pos}" }
  }
}

---

(source_file
  (enum_definition
    (type_identifier)
    (type_parameters
      (type_parameter
        (type_identifier)))
    (enum_body
      (variant_declaration
        (type_identifier)
        (variant_parameters
          (variant_parameter
            (identifier)
            (type_identifier))))
      (variant_declaration
        (type_identifier)
        (variant_parameters
          (variant_parameter
            (type_identifier))
          (variant_parameter
            (type_identifier))))
      (variant_declaration
        (type_identifier))
      (method_definition
        (identifier)
        (return_type
          (type_identifier))
        (block
          (expression_statement
            (float))))))
  (error_definition
    (type_identifier)
    (enum_body
      (variant_declaration
        (type_identifier)
        (variant_parameters
          (variant_parameter
            (identifier)
            (type_identifier))))
      (method_definition
        (identifier)
        (return_type
          (type_identifier))
        (block
          (expression_statement
            (case_expression
              (identifier)
              (case_arm
                (variant_pattern
                  (constant)
                  (pattern_bindings
                    (identifier)))
                (string
                  (string_content)
                  (interpolation
                    (identifier)))))))))))

==================
Interfaces
==================

interface Shape { def area -> Float }
pub interface Checker {
  #[track_caller]
  def check(n: Int)
  def seek!(off: Int) -> Int
  def describe -> Str { "a checker" }
}

---

(source_file
  (interface_definition
    (type_identifier)
    (interface_body
      (interface_method_definition
        (identifier)
        (return_type
          (type_identifier)))))
  (interface_definition
    (type_identifier)
    (interface_body
      (interface_method_definition
        (attribute
          (identifier))
        (identifier)
        (parameters
          (parameter
            (identifier)
            (type_identifier))))
      (interface_method_definition
        (identifier)
        (parameters
          (parameter
            (identifier)
            (type_identifier)))
        (return_type
          (type_identifier)))
      (interface_method_definition
        (identifier)
        (return_type
          (type_identifier))
        (block
          (expression_statement
            (string
              (string_content))))))))

==================
Generic refinement
==================

refine Opt[T] for T? {
  def or_zero -> T { self || T.new() }
  pub def self.make -> T? { none }
}

---

(source_file
  (refinement_definition
    (type_identifier)
    (type_parameters
      (type_parameter
        (type_identifier)))
    (optional_type
      (type_identifier))
    (refinement_body
      (method_definition
        (identifier)
        (return_type
          (type_identifier))
        (block
          (expression_statement
            (binary_expression
              (identifier)
              (call_expression
                (member_expression
                  (constant)
                  (identifier))
                (argument_list))))))
      (method_definition
        (identifier)
        (return_type
          (optional_type
            (type_identifier)))
        (block
          (expression_statement
            (none)))))))

==================
Functions with defaults, attributes and fallible results
==================

#[track_caller]
pub def info(msg: Str, tags: [Str] = [], level: Int = 0) { }
def parse(t: Str) -> ~Int<ParseErr> { t.size }
def run ~ { }
fn area(r: Float) -> Float { r * r }
def max[T: like Int, R: io.Reader](xs: [T]) -> T { xs[0] }

---

(source_file
  (function_definition
    (attribute
      (identifier))
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_identifier))
      (parameter
        (identifier)
        (array_type
          (type_identifier))
        (array_literal))
      (parameter
        (identifier)
        (type_identifier)
        (integer)))
    (block))
  (function_definition
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_identifier)))
    (return_type
      (result_type
        (type_identifier)
        (error_set
          (type_identifier))))
    (block
      (expression_statement
        (member_expression
          (identifier)
          (identifier)))))
  (function_definition
    (identifier)
    (return_type)
    (block))
  (function_definition
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_identifier)))
    (return_type
      (type_identifier))
    (block
      (expression_statement
        (binary_expression
          (identifier)
          (identifier)))))
  (function_definition
    (identifier)
    (type_parameters
      (type_parameter
        (type_identifier)
        (like_type
          (type_identifier)))
      (type_parameter
        (type_identifier)
        (scoped_type_identifier
          (identifier)
          (type_identifier))))
    (parameters
      (parameter
        (identifier)
        (array_type
          (type_identifier))))
    (return_type
      (type_identifier))
    (block
      (expression_statement
        (index_expression
          (identifier)
          (integer))))))

==================
Extern functions
==================

extern def c_getpid() -> I32 = "getpid"
#[link("sqlite3")]
pub extern def sqlite3_open(name: [Byte], db: [Ptr]) -> I32

---

(source_file
  (extern_definition
    (identifier)
    (parameters)
    (return_type
      (type_identifier))
    (string
      (string_content)))
  (extern_definition
    (attribute
      (identifier)
      (attribute_arguments
        (string
          (string_content))))
    (identifier)
    (parameters
      (parameter
        (identifier)
        (array_type
          (type_identifier)))
      (parameter
        (identifier)
        (array_type
          (type_identifier))))
    (return_type
      (type_identifier))))

==================
Tests, benchmarks and examples
==================

test "adds" { assert_eq 1 + 1, 2 }
test "with t" { |t|
  t.log("x")
}
bench "speed" { |b| b.n }
example "hi" { puts "hi" } outputs "hi\n"
example "lines" {
  puts "a"
} outputs <<~EOS
  a
EOS

---

(source_file
  (test_declaration
    (string
      (string_content))
    (block
      (expression_statement
        (command_call
          (identifier)
          (command_argument_list
            (binary_expression
              (integer)
              (integer))
            (integer))))))
  (test_declaration
    (string
      (string_content))
    (block
      (block_parameters
        (identifier))
      (expression_statement
        (call_expression
          (member_expression
            (identifier)
            (identifier))
          (argument_list
            (string
              (string_content)))))))
  (test_declaration
    (string
      (string_content))
    (block
      (block_parameters
        (identifier))
      (expression_statement
        (member_expression
          (identifier)
          (identifier)))))
  (test_declaration
    (string
      (string_content))
    (block
      (expression_statement
        (command_call
          (identifier)
          (command_argument_list
            (string
              (string_content))))))
    (string
      (string_content)
      (escape_sequence)))
  (test_declaration
    (string
      (string_content))
    (block
      (expression_statement
        (command_call
          (identifier)
          (command_argument_list
            (string
              (string_content))))))
    (heredoc))
  (heredoc_body
    (heredoc_content)
    (heredoc_end)))
